--- a/src/index.sass
+++ b/src/index.sass
@@ -5,6 +5,7 @@ body
   overflow-x: hidden
   background-color: $black
   margin: 0
+  font-size: 24px
   font-family: "Titillium Web", sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
@@ -28,8 +29,11 @@ h2
   font-size: 4em
   text-align: center
   text-transform: uppercase
+  @media screen and ( max-width: 992px )
+    font-size: 3em
 
 h3
-  font-weight: bold
   font-size: 2em
   text-align: justify
+  @media screen and ( max-width: 720px )
+    font-size: 1.5em
