--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,28 +1,30 @@
 @import "../_variables"
+@import "../_animations"
 
 $descWidth: 70vw
+.home-section
+  position: relative
+  color: $white
 
 .home-desc-wrap
-  position: absolute
   z-index: 0
-  right: 50px
-  top: 60px
-  width: calc( $descWidth + 20px )
+  width: calc( 70vw + 5px )
   background-color: $reddark
+  margin: 60px 20px
+  animation: fadeIn 2s ease-in 1 normal forwards
   @media screen and ( max-width: 720px )
-    position: relative
-    right: auto
-    top: auto
-    width: auto
+    width: calc( 100vw - 40px )
     margin: 60px 20px
+    border-radius: 50% 0 0 50%
   .home-desc
     width: $descWidth
-    padding-left: 15px
-    margin: 0 0 0 5px
+    padding: 0 25px
+    margin: 0 5px 0 0
     background-color: $black
     @media screen and ( max-width: 720px )
-      width: calc( 100vw - 30px )
-
+      width: calc( 100vw - 45px )
+      padding: 0 5px
+      
 .angle-divider-wrap
   position: relative
   max-width: 100vw
@@ -30,7 +32,7 @@ $descWidth: 70vw
 .angle-divider-wrap::after
   position: absolute
   width: 100vw
-  height: 300px
+  height: 200px
   content: ""
   background-color: inherit
   left: 0
@@ -39,13 +41,25 @@ $descWidth: 70vw
 .home-desc-divider
   z-index: 0
   background-color: $black
-  color: $reddirty
   text-align: center
   width: 100vw
-  height: 100vh
+  min-height: 100vh
+  .links
+    max-width: 100vw
+    margin-top: 35vh
+    @media screen and ( max-width: 1350px )
+      margin-top: 50px
+    a
+      max-height: 130px
+      color: #ffffff !important
+      text-decoration: none !important
+      margin: 0 5vw
+      &:hover
+        color: $reddirty !important
+
 
 .home-desc-divider::after
-  z-index: 3
+  z-index: -1
   top: 80vh
   transform-origin: top left
   transform: skewY(4deg)
@@ -56,11 +70,11 @@ $descWidth: 70vw
   background-color: $yellowish
   text-align: center
   width: 100vw
-  height: 50vh
+  height: 60vh
 
 .home-history-divider::after
   z-index: -1
-  bottom: -100px
+  bottom: 0
   transform-origin: top left
   transform: skewY(4deg)
 
@@ -78,3 +92,20 @@ $descWidth: 70vw
 
 .home-desc
   user-select: none
+
+#git
+  position: absolute
+  right: 20px
+  animation: slideLeft 2s ease forwards
+#lin
+  position: absolute
+  left: 0
+  animation: slideRight 2s ease forwards
+
+.colorFade
+  animation: colorFade 1s ease 2s forwards
+  @keyframes colorFade
+    0%
+      color: $white
+    100%
+      color: $reddirty
