--- a/src/_animations.sass
+++ b/src/_animations.sass
@@ -4,6 +4,13 @@
     100%
         opacity: 1
 
+@keyframes fadeOutish
+    0%
+        opacity: 1
+    100%
+        opacity: 0.5
+
+
 @keyframes slideLeft
     0%
         right: 250px
