--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -2,9 +2,16 @@
 @import "../_animations"
 
 $descWidth: 70vw
+
 .home-section
   position: relative
   color: $white
+
+.particles-wrap
+  position: absolute
+  top: 0
+  width: 100vw
+  height: 100vh
 
 .home-desc-wrap
   z-index: 0
@@ -52,8 +59,10 @@ $descWidth: 70vw
   width: 100vw
   min-height: 100vh
   .links
-    max-width: 100vw
-    margin-top: 35vh
+    position: absolute
+    z-index: 2
+    width: 100vw
+    margin-top: 25vh
     @media screen and ( max-width: 1350px )
       margin-top: 50px
     a
@@ -80,7 +89,7 @@ $descWidth: 70vw
 
 .home-history-divider::before
   z-index: -1
-  bottom: 400px
+  bottom: 450px
   transform-origin: top left
   transform: skewY(4deg)
 
