scuffed project slider

--- a/src/styles/skills.sass
+++ b/src/styles/skills.sass
@@ -3,11 +3,9 @@
 
 .skills-section
     min-height: 100vh
-    padding: 200px 0
+    padding: 200px 10vw
     background-color: $black
-    //background-image: url("../assets/background.png")
-    //background-repeat: no-repeat
-    //background-size: cover
+    
 ul
     list-style: none
     text-align: center
