slider less scuffed

--- a/src/styles/project-box.sass
+++ b/src/styles/project-box.sass
@@ -1,9 +1,12 @@
 @import "../_animations"
 @import "../_variables"
-    
+
+$slideW: 40vw
+$slideH: $slideW/2
+
 .slide-base
-    height: 300px
-    width: 630px 
+    height: $slideH
+    width: $slideW
     //background-color: $black
     background-size: cover
     background-repeat: no-repeat
