--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -10,8 +10,11 @@ $descWidth: 70vw
 .particles-wrap
   position: absolute
   top: 0
+  max-width: 100vw
   width: 100vw
   height: 100vh
+  canvas
+    width: 100vw
 
 .home-desc-wrap
   z-index: 0
@@ -89,9 +92,11 @@ $descWidth: 70vw
 
 .home-history-divider::before
   z-index: -1
-  bottom: 450px
+  bottom: 40vh
   transform-origin: top left
   transform: skewY(4deg)
+  @media screen and ( max-width: 1100px )
+    height: 100px
 
 
 .home-history-divider::after
