3d shadow for slider

--- a/src/styles/project-box.sass
+++ b/src/styles/project-box.sass
@@ -1,5 +1,8 @@
-@import "./projects"
 @import "../_variables"
+
+$slide: 35vw
+$slideMobile: 55vw
+$slideVertical: 90vw
 
 .slide-base
     background-size: cover
