--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -31,7 +31,7 @@ $slideVertical: 90vw
 
 #mobile-btns
     @media screen and ( max-width: 991px )
-        margin-top: 10vh
+        margin-top: 15vh
     @media screen and ( max-width: 420px )
         margin-top: 30vh
     .slider-btn 
@@ -98,6 +98,14 @@ $slideVertical: 90vw
             background-color: #0000004d
             box-shadow: 0px 0px 30px 5px #00000073 !important
             transform: rotate3d(1, 0, 0, 90deg) translateZ(-$slide/15)
+            @media screen and ( max-width: 991px )
+                width: $slideMobile
+                height: $slideMobile
+                transform: rotate3d(1, 0, 0, 90deg) translateZ(-$slideMobile/15)
+            @media screen and ( max-width: 420px )
+                width: $slideVertical /1.5
+                height: $slideVertical / 1.5
+                transform: rotate3d(1, 0, 0, 90deg) translateZ(-$slideVertical / 1.3)
 
 .animationSlideLeft
     animation: rotateLeft 0.7s linear forwards
