color scheme & divider fix

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -1,6 +1,6 @@
-$black: #222222
-$reddark: #A33327
-$reddirty: #C7493A
-$greendirty: #5cdb95
-$yellowish: #edf5e1
+$primary: #333652       //dark blue
+$secondary: #E9EAEC     //cream
+$third: #FAD02C         //yellow
+$fourth: #90ADC6        //blue grey
+$fifth: #C7493A         //dark red
 $white: #f3f3f3
