--- a/src/styles/skill-box.sass
+++ b/src/styles/skill-box.sass
@@ -21,7 +21,7 @@
         position: absolute
         height: 100%
         width: 100%
-        background-color: $yellowish
+        background-color: $secondary
         backface-visibility: hidden
     .card-front
         padding-top: 20%
@@ -42,7 +42,7 @@
             -webkit-font-smoothing: antialiased
             -moz-osx-font-smoothing: grayscale
             font-size: 2em
-            color: $black
+            color: $primary
             @media screen and ( max-width: 420px )
                 margin-top: 15px
         .exp-bar
@@ -51,13 +51,13 @@
             height: 14px
             margin: 0 10%
             padding: 2px
-            background-color: $black
+            background-color: $primary
             .developing
                 position: absolute
                 right: 20px
                 top: 0
                 max-width: 30px
-                color: $greendirty
+                color: $third
                 font-size: 11px
                 animation: floatRight 2s infinite
                 @keyframes floatRight
@@ -71,7 +71,7 @@
                 left: 2px
                 width: 50%
                 height: 10px
-                background-color: $greendirty
+                background-color: $third
     .card-side
         padding: 25px
         right: 0
