--- a/src/index.sass
+++ b/src/index.sass
@@ -3,7 +3,7 @@
 body
   max-width: 100vw
   overflow-x: hidden
-  background-color: $black
+  background-color: $primary
   margin: 0
   font-size: 24px
   font-family: "Titillium Web", sans-serif
