--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -22,5 +22,33 @@
 .App-link
   color: #09d3ac
 
+footer
+  background-color: rgba(250, 208, 44, 0.9)
+  text-align: center
+  font-family: "Montserrat", sans-serif
+  font-size: 9px
+  font-weight: 400
+  letter-spacing: 8px
+
 .row
   max-width: 100vw
+
+.angle-divider-wrap
+  position: relative
+  max-width: 100vw
+
+.angle-divider-wrap::before
+  position: absolute
+  width: 100vw
+  height: 200px
+  content: ""
+  background-color: inherit
+  left: 0
+
+.angle-divider-wrap-after::after
+  position: absolute
+  width: 100vw
+  height: 200px
+  content: ""
+  background-color: inherit
+  left: 0
