--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -19,7 +19,7 @@ $descWidth: 70vw
 .home-desc-wrap
   z-index: 0
   width: calc( 70vw + 5px )
-  background-color: $reddark
+  background-color: $fourth
   margin: 60px 20px
   animation: fadeIn 2s ease-in 1 normal forwards
   @media screen and ( max-width: 720px )
@@ -30,34 +30,13 @@ $descWidth: 70vw
     width: $descWidth
     padding: 0 25px
     margin: 0 5px 0 0
-    background-color: $black
+    background-color: $primary
     @media screen and ( max-width: 720px )
       width: calc( 100vw - 45px )
       padding: 0 5px
-      
-.angle-divider-wrap
-  position: relative
-  max-width: 100vw
-
-.angle-divider-wrap::before
-  position: absolute
-  width: 100vw
-  height: 200px
-  content: ""
-  background-color: inherit
-  left: 0
-
-.angle-divider-wrap::after
-  position: absolute
-  width: 100vw
-  height: 200px
-  content: ""
-  background-color: inherit
-  left: 0
-
 
 .home-desc-divider
-  background-color: $black
+  background-color: $primary
   text-align: center
   width: 100vw
   min-height: 100vh
@@ -74,7 +53,7 @@ $descWidth: 70vw
       text-decoration: none !important
       margin: 0 5vw
       &:hover
-        color: $reddirty !important
+        color: $fifth !important
 
 
 //.home-desc-divider::after
@@ -86,7 +65,7 @@ $descWidth: 70vw
 
 .home-history-divider
   z-index: 2
-  background-color: $yellowish
+  background-color: $secondary
   text-align: center
   width: 100vw
 
@@ -134,4 +113,4 @@ $descWidth: 70vw
     0%
       color: $white
     100%
-      color: $reddirty
+      color: $fifth
