--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -5,6 +5,7 @@ $descWidth: 70vw
 
 .home-section
   position: relative
+  padding-top: 60px
   color: $white
 
 .particles-wrap
@@ -20,7 +21,7 @@ $descWidth: 70vw
   z-index: 0
   width: calc( 70vw + 5px )
   background-color: $fourth
-  margin: 60px 20px
+  margin: 0 20px 60px 20px
   animation: fadeIn 2s ease-in 1 normal forwards
   @media screen and ( max-width: 720px )
     width: calc( 100vw - 40px )
@@ -71,7 +72,7 @@ $descWidth: 70vw
 
 .home-history-divider::before
   z-index: -1
-  bottom: 40vh
+  bottom: 35vh
   transform-origin: top left
   transform: skewY(4deg)
   @media screen and ( max-width: 1100px )
