--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,21 +1,43 @@
-.navbar
-    margin: 0 15% 0 25%
+@import "../_variables"
 
-@media screen and (max-width: 510px)
-    .navbar
-        background-color: #EAE7DC
+.navbar-side
+    position: fixed
+    z-index: 111
+    right: 3vw
+    display: flex
+    text-align: center
+    align-items: center
+    width: 100px
+    height: 100vh
+    ul
         margin: 0
-        padding: 8px 16px 0 0
-    
-
-.nav-content
-
-.nav-link
-    color: white !important
-    padding-left: 25px !important  
-    text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black
-
-
-
-.navbar-light .navbar-nav .active>.nav-link
-    color: white
+        padding: 0
+        list-style: none
+    .nav-link
+        display: block
+        width: 100%
+        margin: 30px 0
+        font-size: 20px
+        user-select: none
+        cursor: pointer
+        .nav-label
+            color: white
+            letter-spacing: 5px
+            opacity: 0
+            transition: 0.6s ease-in
+        svg
+            margin-bottom: -10px
+        .circle-outside
+            opacity: 0.1
+            transition: 0.6s ease-in
+        .circle-inside
+            opacity: 0.1
+        &:hover
+            .nav-label
+                opacity: 1
+            .circle-outside
+                opacity: 1
+            .circle-inside
+                opacity: 1
+        .active
+            opacity: 1 !important
