--- a/src/styles/skills.sass
+++ b/src/styles/skills.sass
@@ -6,7 +6,7 @@ $card_height: 400px
 .skills-section
     min-height: 100vh
     padding: 200px 10vw
-    background-color: $primary        
+    background-color: $fourth
     
     ul
         list-style: none
