--- a/src/index.sass
+++ b/src/index.sass
@@ -35,6 +35,7 @@ h2
     font-size: 3em
 
 h3
+  font-weight: bold
   font-size: 2em
   text-align: justify
   @media screen and ( max-width: 720px )
