--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -1,22 +1,26 @@
 @import "../_animations"
 @import "../_variables"
 
-$slide: 35vw
+$slide: 25vw
 $slideMobile: 55vw
 $slideVertical: 90vw
 
 .row
     margin: 0
 .projects-section
+    padding-top: 50px
     z-index: 2
     width: 100vw
     min-height: 100vh
-    padding-top: 30vh
-    background-color: $third
+    background-color: $primary
     @media screen and ( max-width: 420px )
         padding-top: 20vh
     .row1
         height: calc(15vw + 100px)
+    h3 
+        text-align: center
+        color: $secondary
+        letter-spacing: 6px
 .projects-section::before
     z-index: -1
     top: -5vh
@@ -114,6 +118,18 @@ $slideVertical: 90vw
                 width: $slideVertical /1.5
                 height: $slideVertical / 1.5
                 transform: rotate3d(1, 0, 0, 90deg) translateZ(-$slideVertical / 1.3)
+
+.container
+    margin-top: 50px
+    color: $secondary
+    font-size: 0.75em
+    .text-project
+        color: $fifth
+        font-size: 1em
+        letter-spacing: 4px
+    .desc-project
+        text-align: justify
+
 
 .animationSlideLeft
     animation: rotateLeft 0.7s linear forwards
