--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -23,7 +23,7 @@
   color: #09d3ac
 
 footer
-  background-color: rgba(250, 208, 44, 0.9)
+  background-color: $fifth
   text-align: center
   font-family: "Montserrat", sans-serif
   font-size: 9px
@@ -33,22 +33,6 @@ footer
 .row
   max-width: 100vw
 
-.angle-divider-wrap
-  position: relative
-  max-width: 100vw
-
-.angle-divider-wrap::before
+.slope
   position: absolute
-  width: 100vw
-  height: 200px
-  content: ""
-  background-color: inherit
-  left: 0
-
-.angle-divider-wrap-after::after
-  position: absolute
-  width: 100vw
-  height: 200px
-  content: ""
-  background-color: inherit
-  left: 0
+  z-index: 2
