--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -5,99 +5,81 @@ $descWidth: 70vw
 
 .home-section
   position: relative
-  padding-top: 60px
   color: $white
-
-.particles-wrap
-  position: absolute
-  top: 0
-  max-width: 100vw
-  width: 100vw
-  height: 100vh
-  canvas
-    width: 100vw
-
-.home-desc-wrap
-  z-index: 0
-  width: calc( 70vw + 5px )
-  background-color: $fourth
-  margin: 0 20px 60px 20px
-  animation: fadeIn 2s ease-in 1 normal forwards
-  @media screen and ( max-width: 720px )
-    width: calc( 100vw - 40px )
-    margin: 60px 20px
-    border-radius: 50% 0 0 50%
-  .home-desc
-    text-align: left
-    width: $descWidth
-    padding: 0 25px
-    margin: 0 5px 0 0
-    background-color: $primary
-    @media screen and ( max-width: 720px )
-      width: calc( 100vw - 45px )
-      padding: 0 5px
-    h3 
-      letter-spacing: 5px
-
-.home-desc-divider
-  background-color: $primary
-  text-align: center
-  width: 100vw
-  min-height: 100vh
-  .links
-    position: absolute
-    z-index: 2
-    width: 100vw
-    margin-top: 25vh
-    @media screen and ( max-width: 1350px )
-      margin-top: 50px
-    a
-      max-height: 130px
-      color: #ffffff !important
-      text-decoration: none !important
-      margin: 0 5vw
-      &:hover
-        color: $fifth !important
-
-
-//.home-desc-divider::after
-//  z-index: -1
-//  top: 80vh
-//  transform-origin: top left
-//  transform: skewY(4deg)
-
-
-.home-history-divider
-  z-index: 2
-  background-color: $secondary
-  text-align: center
-  width: 100vw
-
-.home-history-divider::before
-  z-index: -1
-  bottom: 35vh
-  transform-origin: top left
-  transform: skewY(4deg)
-  @media screen and ( max-width: 1100px )
-    height: 100px
-
-
-.home-history-divider::after
-  z-index: -1
-  bottom: 0
-  transform-origin: top left
-  transform: skewY(4deg)
-
+  .home-section-content
+    position: relative
+    height: calc(100vh - 60px)
+    .home-desc
+      text-align: left
+      width: $descWidth
+      padding: 50px 75px
+      margin: 0 5px 10% 0
+      background-color: $primary
+      @media screen and ( max-width: 720px )
+        width: calc( 100vw - 45px )
+        padding: 0 5px
+      h3 
+        letter-spacing: 5px
+      p 
+        text-align: justify
+    .links
+      width: 100vw
+      @media screen and ( max-width: 1350px )
+        margin-top: 50px
+      .col
+        position: relative
+      a
+        max-height: 130px
+        color: #ffffff !important
+        text-decoration: none !important
+        margin: 0 5vw
+        &:hover
+          color: $fifth !important
+        img 
+          margin-left: 18px
+.slope1
+  top: -79px
+  left: 0
+  height: 80px
+  width: 100%
+  clip-path: polygon(0 0, 0% 100%, 100% 100%)
+  background: $secondary
+.slope2
+  top: -49px
+  right: 0
+  height: 50px
+  width: 70%
+  clip-path: polygon(100% 0, 0% 100%, 100% 100%)
+  background: $fifth
+.slope3
+  bottom: -79px
+  right: 0
+  height: 80px
+  width: 100%
+  clip-path: polygon(0 0, 100% 100%, 100% 0)
+  background: $secondary
+.slope4
+  bottom: -49px
+  left: 0
+  height: 50px
+  width: 70%
+  clip-path: polygon(0 0, 0% 100%, 100% 0)
+  background: $fifth
 
 .home-history
-  font-family: "Almendra SC", serif
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
-  font-weight: bold
-  background-image: url("../assets/battle.jpg")
-  background-attachment: fixed
-  -webkit-background-clip: text
-  -webkit-text-fill-color: transparent
+  position: relative
+  height: 200px
+  min-width: 100vw
+  background: $secondary
+  h2
+    font-family: "Almendra SC", serif
+    -webkit-font-smoothing: antialiased
+    -moz-osx-font-smoothing: grayscale
+    font-weight: bold
+    background-image: url("../assets/battle.jpg")
+    background-attachment: fixed
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
 
 #git
   position: absolute
