--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -8,7 +8,7 @@ $slideVertical: 90vw
 .row
     margin: 0
 .projects-section
-    padding-top: 50px
+    padding: 50px 0 100px 0
     z-index: 2
     width: 100vw
     min-height: 100vh
