add projects and made some fixes

--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -1,6 +1,6 @@
-$primary: #333652       //dark blue
+$primary: #111111       //dark blue
 $secondary: #E9EAEC     //cream
 $third: #FAD02C         //yellow
-$fourth: #90ADC6        //blue grey
+$fourth: #111111        //blue grey
 $fifth: #C7493A         //dark red
 $white: #f3f3f3
