--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -23,7 +23,8 @@
   color: #09d3ac
 
 footer
-  background-color: $fifth
+  background-color: $primary
+  color: $secondary
   text-align: center
   font-family: "Montserrat", sans-serif
   font-size: 9px
