--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -12,7 +12,7 @@ $descWidth: 70vw
     .home-desc
       text-align: left
       width: $descWidth
-      padding: 50px 75px
+      padding: 75px 75px
       margin: 0 5px 10% 0
       background-color: $primary
       @media screen and ( max-width: 720px )
@@ -20,8 +20,11 @@ $descWidth: 70vw
         padding: 0 5px
       h3 
         letter-spacing: 5px
+        font-size: 1.7em
       p 
         text-align: justify
+        font-size: 0.8em
+        margin-top: 75px
     .links
       width: 100vw
       @media screen and ( max-width: 1350px )
