--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -8,18 +8,18 @@ $slideVertical: 90vw
 .row
     margin: 0
 .projects-section
-    padding: 50px 0 100px 0
+    padding: 100px 0 100px 0
     z-index: 2
     width: 100vw
     min-height: 100vh
-    background-color: $primary
+    background-color: $secondary
     @media screen and ( max-width: 420px )
         padding-top: 20vh
     .row1
         height: calc(15vw + 100px)
     h3 
         text-align: center
-        color: $secondary
+        color: $primary
         letter-spacing: 6px
 .projects-section::before
     z-index: -1
@@ -31,15 +31,15 @@ $slideVertical: 90vw
 .slider-btn
     margin: 0 12vw
     font-size: 2em
-    color: #ffffffa2
+    color: $fifth
     cursor: pointer
     &:hover
-        color: #ffffff
+        color: rgba(199,73,58,0.75)
 .disabled
-    color: #ffffff3f !important
+    color: rgba(199,73,58,0.2) !important
     cursor: default !important
     &:hover
-        color: #ffffff3f !important
+        color: rgba(199,73,58,0.2) !important
 
 #mobile-btns
     @media screen and ( max-width: 991px )
@@ -121,7 +121,7 @@ $slideVertical: 90vw
 
 .container
     margin-top: 50px
-    color: $secondary
+    color: $primary
     font-size: 0.75em
     .text-project
         color: $fifth
