big change in structure to add node server for email

--- a/client/src/styles/home.sass
+++ b/client/src/styles/home.sass
@@ -40,40 +40,8 @@ $descWidth: 70vw
           color: $fifth !important
         img 
           margin-left: 18px
-.slope1
-  top: -79px
-  left: 0
-  height: 80px
-  width: 100%
-  clip-path: polygon(0 0, 0% 100%, 100% 100%)
-  background: $secondary
-.slope2
-  top: -49px
-  right: 0
-  height: 50px
-  width: 70%
-  clip-path: polygon(100% 0, 0% 100%, 100% 100%)
-  background: $fifth
-.slope3
-  bottom: -79px
-  right: 0
-  height: 80px
-  width: 100%
-  clip-path: polygon(0 0, 100% 100%, 100% 0)
-  background: $secondary
-.slope4
-  bottom: -49px
-  left: 0
-  height: 50px
-  width: 70%
-  clip-path: polygon(0 0, 0% 100%, 100% 0)
-  background: $fifth
 
-.home-history
-  position: relative
-  height: 200px
-  min-width: 100vw
-  background: $secondary
+.slope-divider
   h2
     font-family: "Almendra SC", serif
     -webkit-font-smoothing: antialiased
