--- a/client/src/styles/projects.sass
+++ b/client/src/styles/projects.sass
@@ -12,14 +12,14 @@ $slideVertical: 90vw
     z-index: 2
     width: 100vw
     min-height: 100vh
-    background-color: $secondary
+    background-color: $primary
     @media screen and ( max-width: 420px )
         padding-top: 20vh
     .row1
         height: calc(15vw + 100px)
     h3 
         text-align: center
-        color: $primary
+        color: $secondary
         letter-spacing: 6px
 .projects-section::before
     z-index: -1
@@ -121,7 +121,7 @@ $slideVertical: 90vw
 
 .container
     margin-top: 50px
-    color: $primary
+    color: $secondary
     font-size: 0.75em
     .text-project
         color: $fifth
