skills desc, fixes for mobile view

--- a/client/src/styles/contact.sass
+++ b/client/src/styles/contact.sass
@@ -1,13 +1,14 @@
 @import "../_variables"
 
 .contact-content
-    padding: 0 20px 10px 20px
+    padding: 10px 20px 40px 40px
     color: $primary
     .email-input
         display: block
         margin-left: auto
         margin-right: auto
         width: 50%
+        min-width: 200px
         height: 35px
         padding: 10px 20px
         border: none
