--- a/client/src/styles/home.sass
+++ b/client/src/styles/home.sass
@@ -17,14 +17,18 @@ $descWidth: 70vw
       background-color: $primary
       @media screen and ( max-width: 720px )
         width: calc( 100vw - 45px )
-        padding: 0 5px
+        padding: 20% 10px 0 10px
       h3 
         letter-spacing: 5px
         font-size: 1.7em
+        @media screen and ( max-width: 720px )
+          text-align: left
       p 
         text-align: justify
         font-size: 0.8em
         margin-top: 75px
+        @media screen and ( max-width: 720px )
+          margin-top: 10px
     .links
       width: 100vw
       @media screen and ( max-width: 1350px )
