--- a/client/src/styles/projects.sass
+++ b/client/src/styles/projects.sass
@@ -17,6 +17,7 @@ $slideVertical: 90vw
         padding-top: 20vh
     .row1
         height: calc(15vw + 100px)
+        margin-top: 50px
     h3 
         text-align: center
         color: $secondary
@@ -123,12 +124,14 @@ $slideVertical: 90vw
     margin-top: 50px
     color: $secondary
     font-size: 0.75em
-    .text-project
-        color: $fifth
-        font-size: 1em
-        letter-spacing: 4px
-    .desc-project
-        text-align: justify
+    .project-info
+        padding: 0 20px
+        .text-project
+            color: $fifth
+            font-size: 1em
+            letter-spacing: 2px
+        .desc-project
+            text-align: justify
 
 
 .animationSlideLeft
