--- a/client/src/_animations.sass
+++ b/client/src/_animations.sass
@@ -4,11 +4,11 @@
     100%
         opacity: 1
 
-@keyframes fadeOutish
-    0%
+@keyframes fadeOutIn
+    0%, 100%
         opacity: 1
-    100%
-        opacity: 0.5
+    50%
+        opacity: 0
 
 
 @keyframes slideLeft
