--- a/client/src/styles/project-box.sass
+++ b/client/src/styles/project-box.sass
@@ -15,7 +15,7 @@ $slideVertical: 90vw
         width: 100%
         height: 100%
     @media screen and ( max-width: 420px )
-    	background-position: top center
+        background-position: top center
     .links-wrap
         position: absolute
         right: 10px
@@ -54,3 +54,5 @@ $slideVertical: 90vw
             box-shadow: 0px 0px 1px 1px $primary
             a
                 color: $primary
+.slide6
+    background-image: url("../assets/port.jpg")
