--- a/client/src/styles/projects.sass
+++ b/client/src/styles/projects.sass
@@ -43,6 +43,7 @@ $slideVertical: 90vw
         color: rgba(199,73,58,0.2) !important
 
 #mobile-btns
+    padding-top: 15px
     @media screen and ( max-width: 991px )
         margin-top: 15vh
     @media screen and ( max-width: 420px )
