--- a/client/src/styles/home.sass
+++ b/client/src/styles/home.sass
@@ -15,24 +15,30 @@ $descWidth: 70vw
       padding: 75px 75px
       margin: 0 5px 10% 0
       background-color: $primary
+      @media screen and ( max-width: 950px )
+        width: calc( 100vw - 120px )
+        padding: 20% 10px 0 10px
       @media screen and ( max-width: 720px )
         width: calc( 100vw - 45px )
-        padding: 20% 10px 0 10px
       h3 
         letter-spacing: 5px
         font-size: 1.7em
+        opacity: 0
+        animation: fadeIn 2s ease-out forwards
         @media screen and ( max-width: 720px )
           text-align: left
       p 
         text-align: justify
         font-size: 0.8em
         margin-top: 75px
+        opacity: 0
+        animation: fadeIn 2.3s ease-out 0.5s forwards
         @media screen and ( max-width: 720px )
           margin-top: 10px
     .links
+      position: absolute
       width: 100vw
-      @media screen and ( max-width: 1350px )
-        margin-top: 50px
+      bottom: 20%
       .col
         position: relative
       a
@@ -43,7 +49,9 @@ $descWidth: 70vw
         &:hover
           color: $fifth !important
         img 
-          margin-left: 18px
+          margin-left: 25%
+          @media screen and ( max-width: 720px )
+            margin-left: 5%
 
 .slope-divider
   h2
