--- a/client/src/styles/skill-box.sass
+++ b/client/src/styles/skill-box.sass
@@ -85,6 +85,8 @@
             overflow-y: auto
             font-size: 0.9rem
             line-height: 1
+            .comment
+                font-style: italic
         ::-webkit-scrollbar 
             width: 3px
         ::-webkit-scrollbar-track 
