--- a/client/src/_animations.sass
+++ b/client/src/_animations.sass
@@ -1,3 +1,5 @@
+@import './_variables'
+
 @keyframes fadeIn
     0%
         opacity: 0
@@ -23,3 +25,10 @@
         left: 250px
     100%
         left: 0px
+
+
+@keyframes colorFade
+    0%
+        color: $white
+    100%
+        color: $fifth
