--- a/client/src/styles/contact.sass
+++ b/client/src/styles/contact.sass
@@ -20,8 +20,17 @@
         &:focus
             outline: none
             box-shadow: 1px 2px 5px black
-    p 
+    .contact-info 
+        text-align: justify
+        max-width: 60%
         font-size: 0.8em
+        a
+            text-decoration: none !important
+            &:hover
+                color: $fifth !important
+        @media screen and ( max-width: 600px )
+            max-width: 90%
+            
     button
         display: block
         margin-top: 20px
