--- a/client/src/styles/projects.sass
+++ b/client/src/styles/projects.sass
@@ -8,7 +8,8 @@ $slideVertical: 90vw
 .row
     margin: 0
 .projects-section
-    padding: 100px 0 100px 0
+    padding: 100px 0
+    padding-top: 150px
     z-index: 2
     width: 100vw
     min-height: 100vh
