--- a/client/src/styles/projects.sass
+++ b/client/src/styles/projects.sass
@@ -46,9 +46,9 @@ $slideVertical: 90vw
 #mobile-btns
     padding-top: 15px
     @media screen and ( max-width: 991px )
-        margin-top: 15vh
+        margin-top: 90px
     @media screen and ( max-width: 420px )
-        margin-top: 30vh
+        margin-top: 190px
     .slider-btn 
         margin: 0 10px
 
@@ -120,7 +120,9 @@ $slideVertical: 90vw
             @media screen and ( max-width: 420px )
                 width: $slideVertical /1.5
                 height: $slideVertical / 1.5
-                transform: rotate3d(1, 0, 0, 90deg) translateZ(-$slideVertical / 1.3)
+                transform: rotate3d(1, 0, 0, 90deg) translateZ(-$slideVertical / 1.33)
+            @media screen and ( max-height: 625px )
+                visibility: hidden
 
 .container
     margin-top: 50px
