--- a/client/src/styles/home.sass
+++ b/client/src/styles/home.sass
@@ -8,12 +8,11 @@ $descWidth: 70vw
   color: $white
   .home-section-content
     position: relative
-    height: calc(100vh - 60px)
+    min-height: 50vh
     .home-desc
       text-align: left
       width: $descWidth
-      padding: 75px 75px
-      margin: 0 5px 10% 0
+      padding: 75px
       background-color: $primary
       @media screen and ( max-width: 950px )
         width: calc( 100vw - 120px )
@@ -36,24 +35,33 @@ $descWidth: 70vw
         @media screen and ( max-width: 720px )
           margin-top: 10px
     .links
-      position: absolute
       width: 100vw
-      bottom: 20%
+      height: 100px
+      margin-top: 5vh
       .col
         position: relative
-      a
-        max-height: 130px
-        color: #ffffff !important
-        text-decoration: none !important
-        margin: 0 5vw
-        &:hover
-          color: $fifth !important
-        img 
-          margin-left: 25%
-          @media screen and ( max-width: 720px )
-            margin-left: 5%
+        height: 100px
+        padding: 0
+        &:first-child
+          margin-right: 20px
+        &:last-child
+          margin-left: 20px
+        a
+          position: absolute
+          max-height: 130px
+          max-width: 95px
+          color: #ffffff !important
+          text-decoration: none !important
+          &:hover
+            color: $fifth !important
+          img 
+            margin-left: 20%
+            @media screen and ( max-width: 720px )
+              margin-left: 5%
+              
 
 .slope-divider
+  margin-top: 30vh !important
   h2
     font-family: "Almendra SC", serif
     -webkit-font-smoothing: antialiased
@@ -63,14 +71,11 @@ $descWidth: 70vw
     background-attachment: fixed
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
+    user-select: none
 
 #git
-  position: absolute
-  right: 20px
   animation: slideLeft 2s ease forwards
 #lin
-  position: absolute
-  left: 0
   animation: slideRight 2s ease forwards
 
 .colorFade
