--- a/client/src/styles/skills.sass
+++ b/client/src/styles/skills.sass
@@ -6,7 +6,7 @@ $card_height: 300px
 .skills-section
     position: relative
     min-height: 100vh
-    padding: 200px 10vw
+    padding: 200px 10vw 0 10vw
     background-color: $fourth
     ul
         list-style: none
