minor colours changes

--- a/client/src/_variables.sass
+++ b/client/src/_variables.sass
@@ -1,6 +1,6 @@
-$primary: #111111       //dark blue
+$primary: #1d1d1d       //dark blue
 $secondary: #E9EAEC     //cream
 $third: #FAD02C         //yellow
-$fourth: #111111        //blue grey
+$fourth: #1d1d1d        //blue grey
 $fifth: #C7493A         //dark red
 $white: #f3f3f3
