--- a/client/src/styles/projects.sass
+++ b/client/src/styles/projects.sass
@@ -8,8 +8,8 @@ $slideVertical: 90vw
 .row
     margin: 0
 .projects-section
-    padding: 100px 0
-    padding-top: 150px
+    margin: 100px 0
+    padding-top: 50px
     z-index: 2
     width: 100vw
     min-height: 100vh
@@ -31,7 +31,7 @@ $slideVertical: 90vw
     @media screen and ( max-width: 1100px )
         height: 100px
 .slider-btn
-    margin: 0 12vw
+    margin: 0 7vw
     font-size: 2em
     color: $fifth
     cursor: pointer
@@ -46,7 +46,7 @@ $slideVertical: 90vw
 #mobile-btns
     padding-top: 15px
     @media screen and ( max-width: 991px )
-        margin-top: 90px
+        margin-top: 20px
     @media screen and ( max-width: 420px )
         margin-top: 190px
     .slider-btn 
@@ -129,10 +129,12 @@ $slideVertical: 90vw
     color: $secondary
     font-size: 0.75em
     .project-info
-        padding: 0 20px
+        background: #ffffff11
+        padding: 20px
+        border-radius: 20px
+        font-size: 0.8em
         .text-project
             color: $fifth
-            font-size: 1em
             letter-spacing: 2px
         .desc-project
             text-align: justify
