--- a/client/src/styles/home.sass
+++ b/client/src/styles/home.sass
@@ -24,8 +24,11 @@ $descWidth: 70vw
         font-size: 1.7em
         opacity: 0
         animation: fadeIn 2s ease-out forwards
+        transition: 0.5s ease-out
         @media screen and ( max-width: 720px )
           text-align: left
+        &:hover
+          letter-spacing: 6px
       p 
         text-align: justify
         font-size: 0.8em
@@ -42,16 +45,13 @@ $descWidth: 70vw
         position: relative
         height: 100px
         padding: 0
-        &:first-child
-          margin-right: 20px
-        &:last-child
-          margin-left: 20px
         a
           position: absolute
           max-height: 130px
           max-width: 95px
           color: #ffffff !important
           text-decoration: none !important
+          transition-duration: 0.3s
           &:hover
             color: $fifth !important
           img 
@@ -75,8 +75,10 @@ $descWidth: 70vw
 
 #git
   animation: slideLeft 2s ease forwards
+  right: 10px !important
 #lin
   animation: slideRight 2s ease forwards
+  left: 10px !important
 
 .colorFade
   animation: colorFade 1s ease 2s forwards
