changed about view and color set

--- a/client/src/_animations.sass
+++ b/client/src/_animations.sass
@@ -32,3 +32,21 @@
         color: $white
     100%
         color: $fifth
+
+@keyframes zoomIn
+    0%
+        transform: scale(0.7)
+    100%
+        transform: scale(1)
+
+@keyframes backgroundFloat
+    0%
+        background-position: 49% 50%
+    100%
+        background-position: 52% 50%
+
+@keyframes handFloat
+    0%
+        transform: translate(0, 0)
+    100%
+        transform: translate(0, 10px)
