--- a/client/src/_variables.sass
+++ b/client/src/_variables.sass
@@ -2,5 +2,7 @@ $primary: #1d1d1d       //dark blue
 $secondary: #E9EAEC     //cream
 $third: #FAD02C         //yellow
 $fourth: #1d1d1d        //blue grey
-$fifth: #C7493A         //dark red
+$fifth: #3a67c7         //dark red
 $white: #f3f3f3
+$fourthOpacity: rgba(58, 103, 199, 0.75)
+$fourthDisabled: rgba(58, 103, 199, 0.3)
