--- a/client/src/styles/projects.sass
+++ b/client/src/styles/projects.sass
@@ -36,19 +36,19 @@ $slideVertical: 90vw
     color: $fifth
     cursor: pointer
     &:hover
-        color: rgba(199,73,58,0.75)
+        color: $fourthOpacity
 .disabled
-    color: rgba(199,73,58,0.2) !important
+    color: $fourthDisabled !important
     cursor: default !important
     &:hover
-        color: rgba(199,73,58,0.2) !important
+        color: $fourthDisabled !important
 
 #mobile-btns
     padding-top: 15px
     @media screen and ( max-width: 991px )
-        margin-top: 20px
+        margin-top: 9vw
     @media screen and ( max-width: 420px )
-        margin-top: 190px
+        margin-top: $slideMobile
     .slider-btn 
         margin: 0 10px
 
