spinner on loading, add timeout skip on failed

--- a/client/src/styles/contact.sass
+++ b/client/src/styles/contact.sass
@@ -63,6 +63,7 @@
             
     button
         display: block
+        height: 50px
         margin-top: 20px
         margin-left: auto
         margin-right: auto
@@ -107,7 +108,3 @@
         background: #82ff62
     .error
         background: $fifth
-    .spinner
-        position: absolute
-        right: 18%
-        top: 60%
